# arabic-tf

./: .gitignore  pyproject.toml
data/: nouns.csv  verbs.csv
org/: pres.org
src/: conjugate.py  nouns_model.py
