[tool.poetry]
name = "arabic-tf"
version = "0.1.0"
description = ""
authors = ["OZoneGuy <oalkersh@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
